--- a/Public/index.html
+++ b/Public/index.html
@@ -9,7 +9,7 @@
 
 	<title>Thomas Brown</title>
 
-	<link rel="shortcut icon" href="/images/gt_favicon.png">
+	<link rel="shortcut icon" href="https://www.tsbrown.net/images/gt_favicon.png">
 
 	
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 	
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
 	
-	<link rel="stylesheet" href="/css/styles.css">
+	<link rel="stylesheet" href="https://www.tsbrown.net/css/styles.css">
 
 	
 
@@ -32,9 +32,9 @@
 <header id="header">
 	<div id="head" class="parallax" parallax-speed="2">
 		<h1 id="logo" class="text-center">
-			<img class="img-circle" src="/images/guy.jpg" alt="">
+			<img class="img-circle" src="https://www.tsbrown.net/images/guy.jpg" alt="">
 			<span class="title">Thomas Brown</span>
-			<span class="tagline"><br>
+			<span class="tagline">Data Scientist and Statistician<br>
 				<a href=""></a>
             </span>
 		</h1>
@@ -206,7 +206,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="/js/template.js"></script>
+<script src="https://www.tsbrown.net/js/template.js"></script>
 <script id="dsq-count-scr" src="///count.js" async></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
