update git ignore and index

--- a/Public/about/index.html
+++ b/Public/about/index.html
@@ -133,7 +133,7 @@
 
     <p>I received my MSc in Medical Statistics at the London School of Hygiene and Tropical Medicine, University of London in 2016. Since then I have been working as a Statistician in the pharmaceutical industry. Before undertaking my Masters degree, I studied English Literature at the University of Sydney. During my second year of undergrad I took a course in introductory statistics. I was surprised by how much I enjoyed the course and shortly after finishing it, decided to pursue a career in statistics and data.</p>
 <p>My Interests are include building analytical tools in R and Python, Statstics, and Data Analysis. I am a proponent of the utility for data visualisation and bringing visual and interactive analytics to audiences that reach beyond the typical Statistician and Data Scientist circles.</p>
-<p><img src="/images/img1.jpeg" alt="about"></p>
+<p><img src="/images/img1.jpg" alt="about"></p>
 <h4 id="other-interests">
   Other Interests
   <a class="heading-link" href="#other-interests">
